hphp/hack/test/typecheck/attributes/class_constant_attribute.php.like_types.exp
File "class_constant_attribute.php", line 3, characters 19-38:
Attribute arguments must be literals (Parsing[1002])
