hphp/hack/test/typecheck/attributes/class_constant_attribute.php
<?hh

<<MyAttribute(13, MyClass::CLASS_CONST)>>
class X {}
